# sfxr-qt

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog  LICENSE  Makefile  README.md  audio.cpp  audio.h  main.cpp  main.qml  qml.qrc  qpropgen.cmake  readme-sfxr-sdl.txt  releasetools.toml  sdlkit.cpp  sdlkit.h  sfxr2.cpp  tools.h
.github/workflows/: main.yml
ci/: Dockerfile  README.md  apply-codingstyle  build-app  build-docker-image  check-codingstyle  docker-build-app  headless-test-helper  install-dependencies
ci/lib/: common-dependencies.sh  common.sh  linux-dependencies.sh  macos-dependencies.sh  windows-dependencies.sh
core/: BaseSound.yaml  NoiseGenerator.cpp  NoiseGenerator.h  Result.cpp  Result.h  Sound.cpp  Sound.h  SoundIO.cpp  SoundIO.h  SoundListModel.cpp  SoundListModel.h  SoundPlayer.cpp  SoundPlayer.h  SoundUtils.cpp  SoundUtils.h  Synthesizer.cpp  Synthesizer.h  WavSaver.cpp  WavSaver.h  WaveForm.cpp  WaveForm.h  audio.cpp  audio.h  basehistorymodel.yaml  basesound.yaml  basesoundlistmodel.yaml  basesynthesizer.yaml  basewavsaver.yaml  generator.cpp  generator.h  historymodel.cpp  historymodel.h  noisegenerator.cpp  noisegenerator.h  sound.cpp  sound.h  soundlistmodel.cpp  soundlistmodel.h  soundplayer.cpp  soundplayer.h  (+4 more)
docs/: file-formats.md  release-check-list.md
legacy/: CMakeLists.txt  main.cpp  sdlkit.cpp
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: BaseSoundListModel.yaml  Result.h  Sound.cpp  Sound.h  SoundIO.cpp  SoundIO.h  SoundListModel.cpp  SoundPlayer.cpp  SoundPlayer.h  Synthesizer.cpp  Synthesizer.h  WavSaver.cpp  WavSaver.h  WaveForm.cpp  WaveForm.h
src/ui/: FileActions.qml  Generator.cpp  Generator.h  Generators.qml  PlayBar.qml  SoundPreview.cpp  SoundPreview.h  SoundSlider.qml  TitleLabel.qml  VerticalSpacer.qml  WaveFormSelector.qml  main.cpp  main.qml  qml.qrc
tests/: CMakeLists.txt  SoundTest.cpp  SynthesizerTest.cpp  SynthesizerTest.h  TestConfig.h.in  TestUtils.cpp  TestUtils.h  tests.cpp
tests/fixtures/: pickup.sfxj  pickup.sfxr
tests/fixtures/synthesizer/input/: blip.sfxj  missile.sfxj  pickup.sfxj  power-up-sine.sfxj  power-up.sfxj  splash.sfxj  triangle.sfxj
tools/: release
ui/: FileActions.qml  Generator.cpp  Generator.h  Generators.qml  HistoryView.qml  MainWindow.ui.qml  SliderGroup.qml  SoundListView.qml  SoundSlider.qml  SynthSlider.qml  TitleLabel.qml  WaveFormSelector.qml  main.cpp  main.qml  qml.qrc  sfxr2.cpp
ui/icons/: CMakeLists.txt  sfxr-qt.desktop
